# bunker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bunker_crontab  docker-compose.yml  fix_screens.py  install.sh  manage.py  pyproject.toml  requirements.txt  test_posada_skills.py
bunker_core/: settings.py  urls.py  views.py  wsgi.py
catalog/: admin.py  models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0005_book_cover_url_book_description_book_page_count_and_more.py  0006_book_anthology_stories.py  0007_watcher_wishlistitem.py  0008_remove_book_anthology_stories_remove_book_is_series_and_more.py  0009_book_is_loaned.py  0010_wishlistitem_is_rejected.py  0015_scaninbox.py  0017_book_personal_rating_book_review_notes.py
chess_study/: apps.py  models.py  serializers.py  urls.py  views.py
chess_study/migrations/: 0001_initial.py  0002_chessdirectory_chessroom_directory.py  0004_chessroom_orientation.py  (+4 more)
cli/: api.py  books.py  books_read.py  books_write.py  config.py  directories.py  loans.py  main.py  tracker.py  wishlist.py
disquera/: apps.py  discogs_oracle.py  lastfm_oracle.py  models.py  serializers.py  urls.py  views.py
library_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
library_manager/: settings.py  urls.py
movies/: commercial_oracle.py  models.py  omdb_oracle.py  tmdb_oracle.py  urls.py  views.py
posada/: apps.py  engine.py  models.py  skills.py  urls.py  views.py
scraper/: Dockerfile  book_radar.js  index.js  logger.js  movie_radar.js  music_radar.js  package.json
scripts/: backup.sh
(+63 files in other folders)
