[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "library-cli"
version = "1.0.0"
description = "Un CLI interactivo para gestionar mi biblioteca personal, con funcionalidades de seguimiento de lectura, préstamos, wishlist y directorios personalizados."
dependencies = [
    "typer[all]",
    "httpx",
    "click-repl",
]

[project.scripts]
# crea el comando mágico "bunker" en el sistema operativo
bunker = "cli.main:app"

# Python SOLO empaqueta la carpeta "cli"
[tool.setuptools]
packages = ["cli"]